# green-agent-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.py  mock_purple_agent.py  pyproject.toml  router_executor.py  scenario.bfcl-debug.toml  scenario.bfcl.toml  scenario.cfb-debug.toml  scenario.cfb.toml  scenario.tau2-debug.toml  scenario.tau2.toml  scenario.toml
.github/workflows/: publish.yml
BFCL/: bfcl_agent.py  executor.py  invalid_tasks.txt  pyproject.toml  server.py
BFCL/bfcl_eval/: _llm_response_generation.py
ComplexFuncBench/: .gitignore  cfb_question_test.json  cfbench_agent.py  cfbench_wrapper.py  executor.py  format_logs.py  invalid_tasks.txt  print_results.sh  print_results_excluded.sh  response_evaluator.py  run_models.sh  server.py  test_api.py
ComplexFuncBench/models/: gpt.py
ComplexFuncBench/utils/: compare_method.py
Tau2/: green_executor.py  invalid_tasks.txt  scenario.toml  tau2_evaluator.py  tool_provider.py
agenthard_pipeline/: README.md  main.py  requirements.txt  setup_env.sh
agenthard_pipeline/cached_results/: tau-bench_20250924_011852_filtering_summary.csv  (+2 more)
cached_results/: BFCL_20250924_011855_filtering_summary.csv  complex-func-bench_20250924_011854_filtering_summary.csv  tau2-bench_20250924_011614_filtering_summary.csv
human_labelled_ground_truth/: BFCL.csv  DrafterBench.csv  tau-bench.csv
src/: agent.py  bfcl_agent.py  bfcl_wrapper.py  cfbench_wrapper.py  llm_judge_filtering.py  response_evaluator.py  rule_filtering_orchestrator.py  server.py
tests/: __init__.py  conftest.py  test_api.py
(+82 files in other folders)
